turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {

for (k<-1 to 4) {	
avance(30)
droite(30)
avance(30)
droite(120)
avance(30)
droite(120)
avance(30)
droite(180)
avance(30)
droite(90)
avance(30)
droite(90)
avance(30)
droite(90)
droite(90)
leveCrayon()
avance(50)
gauche(90)
baisseCrayon)
}
}
